fixing dark mode text

--- a/client/src/styles/Eonet.scss
+++ b/client/src/styles/Eonet.scss
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: $text-color;
   padding-top: 30px;
   font-size: 18px;
   font-family: $text-font;
