--- a/client/src/styles/Landing.scss
+++ b/client/src/styles/Landing.scss
@@ -39,7 +39,6 @@
 
   &_content {
     padding-top: 60px;
-    color: $text-color;
     padding-bottom: 100px;
     margin: 0 auto;
     max-width: 70%;
