--- a/client/src/styles/NasaFact.scss
+++ b/client/src/styles/NasaFact.scss
@@ -19,7 +19,6 @@
   }
 
   &_heading {
-    color: $text-color;
     font-family: $heading-font;
     margin-bottom: 40px;
     font-size: 40px;
