--- a/client/src/styles/Search.scss
+++ b/client/src/styles/Search.scss
@@ -4,7 +4,6 @@
   font-family: $text_font;
   font-size: 18px;
   padding-top: 30px;
-  color: $text-color;
 
   &_container {
   }
